--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
     <!-- font awesome-->
-    <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
     <!-- stlyes-->
     <link rel="stylesheet" href="styles.css">
 </head>
