--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
-    <!-- font awesome-->
-    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
+    
     <!-- stlyes-->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -51,5 +50,8 @@
         </section>
     </main>
     <script src="app.js"></script>
+    <!-- font awesome-->
+    <script src="https://kit.fontawesome.com/499e6fc725.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
